# MathPP

./: CMakeLists.txt  LICENSE  README.md  ccdMathppConfig.cmake  ccdMathppConfigVersion.cmake.in
IDEs/CodeLite/: Math.project  Math.workspace
include/: LinearFunction.h  LinearRegression.h  Math.h
include/ccdMathpp/: LinearRegression.h  MathPP.h
src/: CMakeLists.txt  LinearFunction.cpp  LinearRegression.cpp
